# Web-App-Stack

./: .gitignore  README.md  edtech_lms_backup_20260413_120627.sql  feature_speech.md  nginx.conf  package-lock.json  package.json  test_employees.csv  vite.config.ts
client/src/: App.tsx
client/src/components/: markdown-content.tsx  mermaid-diagram.tsx  mindmap-tree.tsx
client/src/components/exam/: ExamUploadDialog.tsx
client/src/components/layout/: app-sidebar.tsx  top-nav.tsx
client/src/hooks/: use-audio.ts  use-courses.ts  use-exams.ts  use-speaking.ts
client/src/lib/: queryClient.ts
client/src/pages/analysis/: index.tsx
client/src/pages/analytics/: index.tsx
client/src/pages/assessments/: index.tsx
client/src/pages/audio/: [id].tsx  index.tsx
client/src/pages/courses/: generator.tsx  index.tsx  player.tsx
docs/superpowers/specs/: 2026-04-14-handwritten-exam-paper-design.md
script/: build.ts
server/: routes.ts
server_py/: .env.example  check_migration.py  check_seeds.py  config.py  database.py  dependencies.py  main.py  migrate_speaking_module.py  models.py  pyproject.toml  requirements.txt  schemas.py  seed.py  seed_speaking_lessons.py  session.py  storage.py
server_py/old_utils/: seed_quiz_data.py
server_py/routers/: analysis.py  analytics.py  assessments.py  audio.py  auth.py  courses.py  enrollments.py  notifications.py  speaking.py  tutor.py  users.py
server_py/services/: edge_tts_service.py  groq_service.py  image_service.py  lesson_recommender.py  mistral_ai.py  pdf_service.py
shared/: routes.ts  schema.ts
(+7 files in other folders)
